# elmos

./: .gitignore  .gitmodules  Makefile  README.md  Taskfile.yml  common.env  elmos.yaml  elmos.yaml.example  go.mod  go.sum  main.go  mkdocs.yml  run.sh  vercel.json
.github/workflows/: docs.yml
Formula/: elmos.rb
api/: Makefile
api/proto/: common.pb.go  common.proto  kernel.pb.go  kernel.proto  kernel_grpc.pb.go  qemu.pb.go  qemu.proto  qemu_grpc.pb.go  toolchain.pb.go  toolchain.proto  toolchain_grpc.pb.go  workspace.pb.go  workspace.proto  workspace_grpc.pb.go
api/server/: kernel.go  qemu.go  server.go  toolchain.go  workspace.go
apps/hello-world/: Makefile  hello-world
assets/: embed.go  embed_test.go
assets/libraries/: byteswap.h  endian.h
assets/libraries/asm/: bitsperlong.h  int-ll64.h  posix_types.h  types.h
assets/templates/app/: Makefile.tmpl  main.c.tmpl
cmd/: apps.go  build.go  completion.go  config.go  doctor.go  qemu.go  repo.go  root.go  ui.go
cmd/elmos/: main_test.go
core/app/: app.go  app_test.go  helpers.go  root.go
core/config/: arch.go  arch_test.go  config.go  defaults.go  loader.go  loader_test.go  saver.go  saver_test.go  types.go
core/context/: context.go  context_test.go  errors.go  errors_test.go
core/ui/: help.go  help_test.go  printer.go  printer_test.go  styles.go
core/ui/graphical/: CMakeLists.txt
core/ui/graphical/include/: archselectorwidget.h  codeeditor.h  grpcclient.h  kernelbuildwidget.h  mainwindow.h  projectexplorer.h  projectwizard.h  qemuconsolewidget.h  settingsdialog.h  syntaxhighlighter.h  toolchainwidget.h  workspacewidget.h
core/ui/graphical/src/: archselectorwidget.cpp  codeeditor.cpp  grpcclient.cpp  kernelbuildwidget.cpp  main.cpp  mainwindow.cpp  projectexplorer.cpp  projectwizard.cpp  qemuconsolewidget.cpp  settingsdialog.cpp  syntaxhighlighter.cpp  toolchainwidget.cpp  workspacewidget.cpp
docs/: index.md
docs/developer/: architecture.md  build-system.md  code-patterns.md  contributing.md  diagrams.md  embedded-assets.md  index.md  roadmap.md  testing.md
docs/diagrams/: class.puml  component.puml  deployment.puml  gui_architecture.puml  gui_build_sequence.puml  platform_abstraction.puml  sequence.puml  state.puml
docs/gui/: ARCHITECTURE.md  README.md
docs/user/: changelog.md  faq.md  getting-started.md  index.md  installation.md  kernel-building.md  modules-and-apps.md  qemu-integration.md  toolchains.md  troubleshooting.md  tui-guide.md
headers/: byteswap.h  elf.h
internal/app/: root.go
internal/config/: config.go  defaults.go
internal/core/: config.go  context.go
internal/tui/: menu.go
libraries/: byteswap.h
modules/char-test/: Makefile  char-test.c
modules/hello-world/: Makefile  hello-world.c
modules/net-monitor/: Makefile
patches/v6.0/: 0001-arch-riscv-kernel-compat_vdso-Makefile-Add-undefined.patch
pkg/version/: version.go  version_test.go
scripts/: branch.sh  build.sh  doctor.sh  image.sh  init  module.sh  patch.sh  qemu.sh  repo.sh  rootfs.sh
(+156 files in other folders)
